fix(language-menu): correct spacing

--- a/client/src/ui/organisms/article-actions/language-menu/index.scss
+++ b/client/src/ui/organisms/article-actions/language-menu/index.scss
@@ -21,22 +21,26 @@
     padding: 0.5rem !important;
 
     &.locale-redirect-setting {
+      border-bottom: 1px solid var(--border-secondary) !important;
+      border-radius: 0 !important;
+      display: block;
+      font-size: var(--type-tiny-font-size);
+      padding: 0.25em 0.5em;
+
       &:hover {
         background-color: unset;
       }
-
-      border-bottom: 1px solid var(--border-secondary) !important;
-      border-radius: 0 !important;
-      font-size: var(--type-tiny-font-size);
-      display: block;
-      padding: 0.25em 0.5em;
 
       .switch {
         display: flex;
       }
 
       .glean-thumbs {
-        margin-top: 0.25em;
+        margin-top: 0.5em;
+
+        .icon {
+          margin-right: unset;
+        }
       }
     }
   }
